all changes Accept

--- a/UserManagementServiceMS/src/main/resources/application.properties
+++ b/UserManagementServiceMS/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=UserManagementServiceMS
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui
+server.port=8080
 
 
 # MySQL Database Configuration
