--- a/UserManagementServiceMS/build.gradle
+++ b/UserManagementServiceMS/build.gradle
@@ -22,7 +22,7 @@ configurations {
 repositories {
 	mavenCentral()
 }
-//bootJar {     archiveFileName = 'my-UserService-App.jar' }
+bootJar {     archiveFileName = 'my-UserService-App.jar' }
 
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter') {
