--- a/UserManagementServiceMS/src/main/resources/application.properties
+++ b/UserManagementServiceMS/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/bank_america?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://boadbinstance1.cdc26i02m286.us-east-1.rds.amazonaws.com:3306/boadbinstance1?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=NewPassword123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
