--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -10,7 +10,7 @@ phases:
       - ./gradlew build
       - echo Logging in to Amazon ECR...
       - aws --version
-      - REPOSITORY_URI=717279701053.dkr.ecr.us-east-1.amazonaws.com/tekarch/boa-repo
+      - REPOSITORY_URI=717279701053.dkr.ecr.us-east-1.amazonaws.com/tekarch-user-repo
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $REPOSITORY_URI
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
@@ -30,7 +30,7 @@ phases:
       - printf '[{"name":"course-service","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
       - echo Writing image definitions file...
       # add your container name
-      - DOCKER_CONTAINER_NAME=tekarch/boa-repo
+      - DOCKER_CONTAINER_NAME=tekarch-user-repo
       - printf '[{"name":"%s","imageUri":"%s"}]' $DOCKER_CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
       - echo $DOCKER_CONTAINER_NAME
       - echo printing imagedefinitions.json
